# flask-dashboard

./: main.py  pyproject.toml
app/: __init__.py  data.py  index.py  util.py
app/static/: styles.css
app/templates/: index.html
