[tool.poetry]
name = "flask dashboard"
version = "0.1.0"
description = "Financial dashboard with Flask"
authors = ["sp3ncerlan <lansp329@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
pandas = "^1.5.3"
matplotlib = "^3.7.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
